[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/enemy.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0.952941, 0.0705882, 0.0705882, 1 )

[sub_resource type="SphereShape" id=3]
radius = 1.05

[sub_resource type="SphereShape" id=4]
radius = 30.0

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 2 )

[node name="body" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 3 )

[node name="detect" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="detect"]
shape = SubResource( 4 )

[node name="Damage" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Damage"]
transform = Transform( 2.1, 0, 0, 0, 2.1, 0, 0, 0, 2.1, 0, 0, 0 )
shape = SubResource( 3 )
[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_detect_body_exited"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
